# smallvec

./: CHANGELOG.md  LICENSE  README.md  smallvec.cabal
src/Data/Vector/: Small.hs
src/Data/Vector/Small/: Internal.hs  Mutable.hs
test/: Spec.hs
